--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 <body>
 
   <!-- Write your HTML in this file -->
+  <ul>
+    <li>2 slices of bread</li>
+    <li>4 slices of cheese
+    <ul>
+      <li>cheddar</li>
+      <li>mozzarella</li>
+      <li>peper jack</li>
+    </ul>
+    </li>
+    <li>1 tbsp of butter</li>
+    <ol>
+      
+    </ol>
+  </ul>
+  
+  
+  
 
 </body>
 </html>
