--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <li>1 tbsp of butter</li>
     
     <ol>
-      <li></li>
+      <li>Spread butter on bread and frying pan</li>
       <li></li>
       <li></li>
       <li></li>
